--- a/001/index.hbs
+++ b/001/index.hbs
@@ -3,6 +3,5 @@ layout:
 title: Welcome!
 ---
 <table cellpadding="0" cellspacing="0" border="0" class="" align="left" bgcolor="#FFFFFF">
-{{> product product.online-basics }}
-{{> product product.online-package }}
+{{> partial partial.item1 }}
 </table>
