--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,1 +1,31 @@
-@import 'normalize.less';
+// Core variables and mixins
+@import "bower_components/bootstrap/less/variables.less";
+@import "bower_components/bootstrap/less/mixins.less";
+
+// Reset and dependencies
+@import "bower_components/bootstrap/less/normalize.less";
+@import "bower_components/bootstrap/less/print.less";
+@import "bower_components/bootstrap/less/glyphicons.less";
+
+// Core CSS
+@import "bower_components/bootstrap/less/scaffolding.less";
+@import "bower_components/bootstrap/less/type.less";
+@import "bower_components/bootstrap/less/code.less";
+@import "bower_components/bootstrap/less/grid.less";
+@import "bower_components/bootstrap/less/tables.less";
+@import "bower_components/bootstrap/less/forms.less";
+@import "bower_components/bootstrap/less/buttons.less";
+
+// Components
+@import "bower_components/bootstrap/less/component-animations.less";
+
+// Components w/ JavaScript
+@import "bower_components/bootstrap/less/modals.less";
+
+// Utility classes
+@import "bower_components/bootstrap/less/utilities.less";
+@import "bower_components/bootstrap/less/responsive-utilities.less";
+
+
+// Custom LESS
+@import "c_bootstrap.less";
