--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -11,11 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../assets/css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-    	{{ body }}
+        {{ body }}
     </body>
 </html>
